force-app/main/default/objects/Metadata_Activation_Settings__c/Metadata_Activation_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to disable/enable validation rules, process builders, triggers for users and profiles</description>
    <label>Metadata Activation Settings</label>
</CustomObject>