force-app/main/default/objects/Metadata_Activation_Settings__c/fields/Disable_PB__c.field-meta.xml
<CustomField>
    <fullName>Disable_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Processes for users and profile</description>
    <inlineHelpText>Check if you want Process Builder to be disabled for the SObject</inlineHelpText>
    <label>Disable Process Builder</label>
    <type>Checkbox</type>
</CustomField>