force-app/main/default/objects/Metadata_Activation_Settings__c/fields/Disable_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the trigger on the specified SObject</description>
    <inlineHelpText>Check if the trigger needs to be disabled for the specified SObject</inlineHelpText>
    <label>Disable Trigger</label>
    <type>Checkbox</type>
</CustomField>