force-app/main/default/objects/Metadata_Activation_Settings__c/fields/Disable_VR__c.field-meta.xml
<CustomField>
    <fullName>Disable_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable validation rules for the specified object</description>
    <inlineHelpText>Check if validation rules should be disabled for the SObject</inlineHelpText>
    <label>Disable Validation Rule</label>
    <type>Checkbox</type>
</CustomField>