force-app/main/default/objects/Metadata_Activation_Settings__c/fields/Disable_WF__c.field-meta.xml
<CustomField>
    <fullName>Disable_WF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Workflows for the specified object</description>
    <inlineHelpText>Check if the workflow rules need to be disabled for the SObject</inlineHelpText>
    <label>Disable Workflow</label>
    <type>Checkbox</type>
</CustomField>