force-app/main/default/objects/Metadata_Activation_Settings__c/fields/Logs_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Logs_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#SFCPQBLG - Controls if logs are enabled through out system</description>
    <inlineHelpText>Enable Logs to be published</inlineHelpText>
    <label>Logs Enabled</label>
    <type>Checkbox</type>
</CustomField>