force-app/main/default/objects/Metadata_Activation_Settings__c/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>Specify for which object processes should be bypassed</description>
    <inlineHelpText>Specify API names separated by semicolon (&apos;;&apos;) of the SObject for which you want to disable/enable the process builders, workflows, validation rules, triggers</inlineHelpText>
    <label>SObject API Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>