force-app/main/default/objects/Metadata_Activation_Settings__c/listViews/my_view.listView-meta.xml
<ListView>
    <fullName>my_view</fullName>
    <columns>SObject_API_Name__c</columns>
    <columns>Disable_PB__c</columns>
    <columns>Disable_Trigger__c</columns>
    <columns>Disable_VR__c</columns>
    <columns>Disable_WF__c</columns>
    <columns>Logs_Enabled__c</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>my view</label>
    <language>en_US</language>
</ListView>